--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,15 @@
 theme: jekyll-theme-minimal
-title: Octocat's homepage
-description: Bookmark this to keep an eye on my project updates!
+title: Your Name
+description: A brief description of your work
+baseurl: "" # leave empty for root
+
+# Optional configurations
+author:
+  name: Your Name
+  email: your-email@example.com
+
+# Navigation links
+nav:
+  - Home: /
+  - CV: /cv
+  - Research: /research
