--- a/_config.yml
+++ b/_config.yml
@@ -1,15 +1,15 @@
 theme: jekyll-theme-minimal
-title: Your Name
+title: Prunelle Vogler
 description: A brief description of your work
 baseurl: "" # leave empty for root
 
 # Optional configurations
 author:
-  name: Your Name
-  email: your-email@example.com
+  name: Prunelle Vogler
 
 # Navigation links
 nav:
   - Home: /
   - CV: /cv
   - Research: /research
+  - Politics: /politics
