--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,6 @@
-theme: tactile
+remote_theme: pages-themes/tactile@v0.2.0
+plugins:
+- jekyll-remote-theme 
 title: Prunelle Vogler
 description: A brief description of your work
 
