--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 remote_theme: pages-themes/tactile@v0.2.0
 plugins:
 - jekyll-remote-theme 
-title: Prunelle Vogler
+title: Website
 description: Prunelle Vogler
 
 # Navigation links
